--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 argparse==1.2.1
--e git://github.com/briem-bixly/python-nebrios#egg=python-nebrios
+git+https://github.com/briem-bixly/python-nebrios#egg=python-nebrios
 requests==2.7.0
 wsgiref==0.1.2
